--- a/client/src/styles/Battle.css
+++ b/client/src/styles/Battle.css
@@ -26,17 +26,17 @@
     align-items: center;
     margin:20px;
 }
-button {
-    margin :10px;
-    height: 50px;
-        width: 50%;
-        
-    
-}
+
 .buttonBattle{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.buttonBattle button {
+    margin :10px;
+    height: 50px;
+        width: 50%;
+        
 }
 .chickenEnemies{
         background-color: #c51e1e;
